--- a/index_browse.html
+++ b/index_browse.html
@@ -12,6 +12,7 @@
   <meta property="og:image" content="http://striblab.github.io/startribune_dataviz/img/dataviz_banner.png"/>
   <meta property="og:site_name" content="StribLab"/>
   <meta property="og:description" content="Data-driven storytelling, maps, charts and more | Startribune.com" />
+  <link href="//assets.juicer.io/embed.css" media="all" rel="stylesheet" type="text/css" />
 
   <title>StribLab</title>
    <style>
@@ -83,7 +84,7 @@
     ul.share-buttons li { display:inline !important; }
     ul.share-buttons li:hover { opacity:0.8; cursor:pointer; }
     #sharing { text-align:center; margin-left:auto; margin-right:auto; padding:20px; }
-    .follow { padding:15px; }
+    .follow { padding:15px; text-align:center; }
 
 /*SIDEBAR*/
       #dataSidebar { float:left !important; display:inline-block !important; width:30% !important; border: 1px solid #ddd; }
@@ -276,10 +277,10 @@
 <div id="sidebar">
 
 <div class="icon sort-link selected articles" id="allProjects_m"><img data="startribune" src="img/striblab.png" alt="striblab" /></div>
-<div class="icon sort-link" id="datadrop"><img src="img/datadrop.png" alt="datadrop" /></div>
+<div class="icon sort-link" id="twitter"><img src="img/twitter.png" alt="twitter" /></div>
 <div class="icon sort-link" id="resources"><img src="img/tools.png" alt="tools" /></div>
 <div class="icon sort-link" id="tools"><img src="img/code.png" alt="code" /></div>
-<div class="icon github"><a class="icon sort-link" href="https://github.com/striblab"><img data="github" src="img/github.png" alt="github" /></a></div>
+<div class="icon github"><a class="icon sort-link" href="https://github.com/striblab" target="new_"><img data="github" src="img/github.png" alt="github" /></a></div>
 
 </div>
 
@@ -309,10 +310,16 @@
 </section>
 </div>
 
+<div id="twitterBlock" class="contentBox socialBox">
+<div class="follow"><a href="https://twitter.com/jeffhargarten" target="new_">Follow me on Twitter</a></div>
+<ul class="juicer-feed" data-feed-id="jeffhargarten" data-per="5" data-filter="Twitter"></ul>
+</div>
+
 <div id="articlePane" class="sectionBox">
 
 
 </div>
+
 
 <div id="resourcesBlock" class="resources">
 <a href="http://journalismtools.io/tools/" target="new_"><img src="./img/jtools.png" width="100%" alt="tools" /></a>
@@ -448,18 +455,18 @@
 </div>
 
 <div id="topmenu">
-<div class="siteNav"><a href="http://freyhargarten.com"><button class="topbutton">Resume</button></a><div><a href="https://www.linkedin.com/in/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/linkedin.png" alt="linkedin" /></a><a href="https://github.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/github.png" alt="github" /></a><a href="https://www.facebook.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/facebook.png" alt="facebook" /></a></div></div>
+<div class="siteNav"><a href="http://freyhargarten.com"><button class="topbutton">Resume</button></a><div><a href="https://www.linkedin.com/in/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/linkedin.png" alt="linkedin" /></a><a href="https://www.facebook.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/facebook.png" alt="facebook" /></a><a href="https://www.instagram.com/jeffhargarten/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/instagram.png" alt="instagram" /></a></div></div>
 
-<div class="siteNav"><a href="http://striblab.github.io/startribune_dataviz/index_browse.html"><button class="topbutton this">Articles</button></a><div><a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/striblab.png" alt="striblab" /></a><a href="http://startribune.com/local/datadrop" target="new_"><img src="http://freyhargarten.com/_base/img/icons/datadrop.png" alt="datadrop" /></a><a href="https://muckrack.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/muckrack.png" alt="muckrack" /></a></div></div>
+<div class="siteNav"><a href="http://striblab.github.io/startribune_dataviz/index_browse.html"><button class="topbutton">Articles</button></a><div><a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/striblab.png" alt="striblab" /></a><a href="http://twitter.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/twitter.png" alt="twitter" /></a><a href="https://github.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/github.png" alt="github" /></a></div></div>
 
-<div class="siteNav"><a href="http://datamancy.org"><button class="topbutton">Blog</button></a><div><a href="http://twitter.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/twitter.png" alt="twitter" /></a><a href="https://www.vimeo.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/vimeo.png" alt="vimeo" /></a><a href="https://www.instagram.com/jeffhargarten/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/instagram.png" alt="instagram" /></a></div></div>
+<div class="siteNav"><a href="http://datamancy.org"><button class="topbutton">Blog</button></a><div><a href="https://www.vimeo.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/vimeo.png" alt="vimeo" /></a></div></div>
 
-<div class="siteNav"><a href="http://deadskies.org"><button class="topbutton">Artwork</button></a><div><a href="http://jhshadowflare.deviantart.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/deviantart.png" alt="deviantart" /></a><a href="http://jeffhargarten.tumblr.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/tumblr.png" alt="tumblr" /></a><a href="https://soundcloud.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/soundcloud.png" alt="soundcloud" /></a></div></div>
+<div class="siteNav"><a href="http://deadskies.org"><button class="topbutton this">Artwork</button></a><div><a href="http://jhshadowflare.deviantart.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/deviantart.png" alt="deviantart" /></a><a href="http://jeffhargarten.tumblr.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/tumblr.png" alt="tumblr" /></a><a href="https://soundcloud.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/soundcloud.png" alt="soundcloud" /></a></div></div>
 </div>
 
 <p></p>
 
-<div id="footer"><span><a href="https://creativecommons.org/" target="new_"><img src="http://freyhargarten.com/_base/img/cc.large.png" width="15" alt="CC" /></a></span> Star Tribune, Frey Hargarten 2016</div>
+<div id="footer"><span><a href="https://creativecommons.org/" target="new_"><img src="http://freyhargarten.com/_base/img/cc.large.png" width="15" alt="CC" /></a></span> Star Tribune, Frey Hargarten 2017</div>
 
 </div>
 <!--close wrapper-->
@@ -467,6 +474,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-530d7525029946bb"></script>
+<script src="//assets.juicer.io/embed.js" type="text/javascript"></script>
 
 <script>
 // $(window).on('resize', function(event){
@@ -563,8 +571,10 @@ $( ".sort-link" ).click(function() {
   $("." + $(this).attr("id")).show();
   $("#resourcesBlock").hide();
   if ($(this).attr("id") != "tools") { $(".tools").hide(); }
-  if ($(this).attr("id") == "resources") { $(".articleEntry, #contributorsBlock").hide(); $("#resourcesBlock").show(); }
-  if ($(this).attr("id") == "contributors") { $("#resourcesBlock, .articleEntry").hide(); $(" #contributorsBlock").show(); }
+  if ($(this).attr("id") == "twitter") { $(".articleEntry, #contributorsBlock").hide(); $("#resourcesBlock").hide(); $("#twitterBlock").show(); }
+  if ($(this).attr("id") == "resources") { $(".articleEntry, #contributorsBlock").hide(); $("#resourcesBlock").show();
+  $("#twitterBlock").hide(); }
+  if ($(this).attr("id") == "contributors") { $("#resourcesBlock, .articleEntry").hide(); $(" #contributorsBlock").show(); $("#twitterBlock").hide(); }
 });
 
 $( "#allProjects, #allProjects_m" ).click(function() {
