--- a/index_browse.html
+++ b/index_browse.html
@@ -286,6 +286,12 @@
 
 <div id="content">
 
+<div id="twitterBlock" class="contentBox socialBox">
+<div class="follow"><a href="https://twitter.com/jeffhargarten" target="new_">Follow me on Twitter</a></div>
+<ul class="juicer-feed" data-feed-id="jeffhargarten" data-per="5" data-filter="Twitter"></ul>
+</div>
+
+<div id="articlePane" class="sectionBox">
 <div id="sorting" class="sectionBox">
   <section class="main">
         <div class="wrapper-demo">
@@ -310,18 +316,12 @@
 </section>
 </div>
 
-<div id="twitterBlock" class="contentBox socialBox">
-<div class="follow"><a href="https://twitter.com/jeffhargarten" target="new_">Follow me on Twitter</a></div>
-<ul class="juicer-feed" data-feed-id="jeffhargarten" data-per="5" data-filter="Twitter"></ul>
-</div>
-
-<div id="articlePane" class="sectionBox">
-
-
+<div class="follow"><a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Follow me on Star Tribune</a></div>
 </div>
 
 
 <div id="resourcesBlock" class="resources">
+
 <a href="http://journalismtools.io/tools/" target="new_"><img src="./img/jtools.png" width="100%" alt="tools" /></a>
 
 <h3 id="foi">Freedom of Information</h3>
