--- a/20170510-global_dining/builds/development/index.html
+++ b/20170510-global_dining/builds/development/index.html
@@ -16,7 +16,11 @@
  
 <div id="wrapper">
 
-<div id="map"></div>
+<div class="map" id="central"></div>
+
+<div class="map" id="university"></div>
+
+<div class="map" id="nicollet"></div>
 
 </div>
 
