--- a/20170514-listings/builds/development/index.html
+++ b/20170514-listings/builds/development/index.html
@@ -55,7 +55,7 @@
 <div id="districtName"></div>
 
 <div class="metricRow" id="indexRow">
-  <div style="text-align:left; text-decoration:underline;">Key metrics</div>
+  <div style="text-align:left; text-decoration:underline;">Inventory of homes for sale, by price range</div>
   <div class="smallBreak"></div>
 
   <div class="metricCol">
@@ -72,7 +72,7 @@
   </div>
   <div class="metricCol">
     <div class="metric" id="change">0%</div>
-    <div class="metricLabel">homes percent change</div>
+    <div class="metricLabel">inventory change 2016-2017</div>
   </div>
 
 </div>
@@ -80,7 +80,7 @@
 <div class="smallBreak"></div>
 
 <div class="metricRow">
-  <div style="text-align:left; text-decoration:underline;">Characteristics</div>
+  <div style="text-align:left; text-decoration:underline;">Community characteristics</div>
   <div class="smallBreak"></div>
 
   <div class="metricCol">
@@ -123,14 +123,12 @@
 <div id="cities"></div>
 </div>
 
-<!-- <div style="margin:5px; clear:both;"></div>
+<div style="margin:5px; clear:both;"></div>
 
-<div class="mobilekill"><span style='background:#888888;'>Gray</span> cities on map not included due to less than 100 sales.</div>
-<div class="smallBreak"></div>
-<div class="mobilekill">*Change between 2016 and the previous four-year average.</div> -->
+<div class="mobilekill source" id="key">starter home: <$250,000 | trade-up home: $250,000 to <$500,000 | 
+premium = $500,000 and higher</div>
 
 </div>
-
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
 <script src="js/d3.v3.min.js"></script>
