--- a/20170514-listings/builds/development/index.html
+++ b/20170514-listings/builds/development/index.html
@@ -125,7 +125,7 @@
 
 <div style="margin:5px; clear:both;"></div>
 
-<div class="mobilekill source" id="key">starter home: under $250,000 | trade-up home: $250,000 to $500,000 | premium: $500,000 and higher</div>
+<div class="mobilekill source" id="key">starter home: under $250,000 | trade-up home: $250,000 to $500,000 | premium home: $500,000 and higher</div>
 
 </div>
 
