--- a/20170615-zebra/builds/development/index.html
+++ b/20170615-zebra/builds/development/index.html
@@ -25,83 +25,43 @@
 
 <div id="fullpage">
   <div class="section " id="section0">
-      <div class="chartTitle">The invasion begins</div>
-      <div class="chatter">Lake St. Clair (?)  I think this is the water body adjoining lake erie where zebra mussels were first detected in the U.S. Chicago -- an industrial river pathway gave zebra mussels entre’ to the rest of the U.S.</div>
+      <div class="chartTitle">The beginning</div>
+      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
   </div>
   <div class="section" id="section1">
-      <div class="chartTitle">Spreading through the Great Lakes</div>
+      <div class="chartTitle">Patient zero</div>
       <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
   </div>
   <div class="section" id="section2">
         <div class="chartTitle">First zebra mussels in Minnesota</div>
-      <div class="chatter">Mississippi River near LaCrosse where USGS found the first zebra mussel in Minnesota.</div>
+      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
   </div>
   <div class="section" id="section3">
-      <div class="chartTitle">Entering via Superior</div>
-      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
-  </div>
-  <div class="section" id="section4">
-      <div class="chartTitle">Into Lake Pepin</div>
-      <div class="chatter">where the zebras moved next. Lake Pepin was an early spreader.</div>
-  </div>
-  <div class="section" id="section5">
-      <div class="chartTitle">Ossiwinimikee Lake</div>
-      <div class="chatter">first inland Minnesota lake (unattached to the river) to be infected.</div>
-  </div>
-  <div class="section" id="section6">
-      <div class="chartTitle">Infected Minnesota lakes</div>
-      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
-  </div>
-  <div class="section" id="section7">
       <div class="chartTitle">Mille Lacs: A lake in crisis</div>
       <div class="chatter">an early host for zebras and the focus of much study. Mille Lacs zebras, contrary to intuition, has not been a spreader according to DNA  testing</div>
   </div>
+  <div class="section" id="section4">
+      <div class="chartTitle">Christmas Lake</div>
+      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
+  </div>
+  <div class="section" id="section5">
+      <div class="chartTitle">Lake Minnetonka</div>
+      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
+  </div>
+  <div class="section" id="section6">
+      <div class="chartTitle">Lake Winnie</div>
+      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
+  </div>
+  <div class="section" id="section7">
+      <div class="chartTitle">Isolating genetic variety</div>
+      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
+  </div>
   <div class="section" id="section8">
-      <div class="chartTitle">Rose Lake</div>
-      <div class="chatter">The one lake in Minnesota where we know for sure how it was infected by zebras: a north dakota lake service provider set a dock in the lake that was full of the mussels. He was criminally prosecuted and officials swooped in to kill the zebras. We don’t know if it worked yet.</div>
+      <div class="chartTitle">National spread</div>
+      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
   </div>
   <div class="section" id="section9">
-      <div class="chartTitle">Leech Lake</div>
-      <div class="chatter">the biggest lake in Cass County and a cornerstone of northern Minnesota’s summer lakes traffic, was detected to have veligers last summer in two different parts of the lake. The DNR just completed major and successful fisheries work to revive the walleye population in Leech, now people will sit back and see if an infestation tips that in another direction.</div>
-  </div>
-  <div class="section" id="section10">
-      <div class="chartTitle">Gull Lake and other Crow Wing County lakes</div>
-      <div class="chatter">an example of a cluster of lakes infested with the same mutation of zebra mussel, proving how overland boat hauling from lake to lake is the main pathway.  There are 7 (?)  of these clusters identified so far by DNA testing.</div>
-  </div>
-    <div class="section" id="section11">
-      <div class="chartTitle">Christmas Lake</div>
-      <div class="chatter">An example of several futile attempts by the DNR to eradicate zebra mussels in a lake.  They pounded Christmas with toxins and it killed the mussels near a boat ramp where they were seemingly contained. But the mussels reappeared in the lake and it’s beyond fixable.</div>
-  </div>
-    <div class="section" id="section12">
-      <div class="chartTitle">Lake Minnetonka</div>
-      <div class="chatter">Billions of zebra mussels infect this most popular lake and USGS scientists collect their testing samples from Robinson Bay to do national research.</div>
-  </div>
-    <div class="section" id="section13">
-      <div class="chartTitle">Vermilion Lake</div>
-      <div class="chatter">An example of low-calcium lakes in northeast minnesota that aren’t suitable for zebras. They have focused their AIS efforts on other species.</div>
-  </div>
-    <div class="section" id="section14">
-      <div class="chartTitle">St. Croix River</div>
-      <div class="chatter"> wild, scenic and pristine, but zebras are threatening to collapse the beautiful assortment of native mussels in this river.</div>
-  </div>
-    <div class="section" id="section15">
-      <div class="chartTitle">Vermilion Lake</div>
-      <div class="chatter">An example of low-calcium lakes in northeast minnesota that aren’t suitable for zebras. They have focused their AIS efforts on other species.</div>
-  </div>
-    <div class="section" id="section16">
-      <div class="chartTitle">Hubbard County</div>
-      <div class="chatter">one of the first minnesota counties to fight AIS on its own.  As a result, Hubbard County is zebra mussel free</div>
-  </div>
-    <div class="section" id="section17">
-      <div class="chartTitle">Winnibigoshish</div>
-      <div class="chatter">northern iconic walleye factory just infected last summer. Ppl there fear the same fate as the mille lacs fishery.</div>
-  </div>
-  <div class="section" id="section18">
-        <div class="chartTitle">Striking out westward</div>
-      <div class="chatter">Montana is one of the new hotspots for zebra mussels. Officials there are freaked out that the mussels will interfere with hydropower installations in big reservoirs.  It’s actually keeping zebra mussel research alive because of industry’s needs.</div>
-  </div>
-  <div class="section" id="section19">
-      <div class="chartTitle">INVASION</div>
+      <div class="chartTitle">Is your lake infested?</div>
       <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
   </div>
 </div>
