--- a/20170521-metcouncil/builds/development/index.html
+++ b/20170521-metcouncil/builds/development/index.html
@@ -46,7 +46,7 @@
 
 <div class="topLabels"><div class="leftSide">&#60;&#60;2010</div><div class="rightSide">1970&#62;&#62;</div></div>
 
-<div id="districtSelect">Select area: <span id='thisDistrict'>Twin Cities Region (7-county)</span></div>
+<div id="districtSelect">Click to select area: <span id='thisDistrict'>Twin Cities Region (7-county)</span></div>
 
 <div id="listing">
 <div id="filter"><input type="search" id="filter_box" placeholder="Search by location" /></div>
@@ -116,11 +116,11 @@ TEXT HERE
   <div id="current" class="mapOther"></div>
   </div>
 
-  <div class="blockSpace"></div>
+  <div class="blockSpaceOther"></div>
   <div class="topLabels2"><div class="leftSide">&#60;&#60;2010</div><div class="rightSide">1966&#62;&#62;</div></div>
 
   <div class="chartTitle">Comparing 1966 and 2010 satellite maps</div>
-  <div class="chatter">Swipe the slider to the right to see metro area satellite imagery from 1966, and to the left to see imagery from this decade.</div>
+  <div class="chatter">Swipe the slider to the right to see metro area satellite imagery from 1966, and to the left to see imagery from this decade. Use the zoom controls to explore.</div>
   <div class="source">Source: <a href="http://gis.uspatial.umn.edu/arcgis/rest/services/Libraries/MSPAerialMosaic_1966/MapServer" target="new_">University of Minnesota U-Spatial</a></div>
 
 </div>
