--- a/20170521-metcouncil/builds/development/index.html
+++ b/20170521-metcouncil/builds/development/index.html
@@ -76,7 +76,7 @@ TEXT HERE
 
 <div class="adjacent">
 <div class="chartHead"><img src="img/race-old.png" class="icon" />
-<div class="statLabel">Undeveloped Acres: <span class="stat" id="land"></span> | <span id="landChange" class="pct neg"></span> change</div></div>
+<div class="statLabel">Developed Acres: <span class="stat" id="land"></span> | <span id="landChange" class="pct pos"></span> change</div></div>
 <div id="chartLand" class="chart"></div>
 </div>
 
