--- a/20170521-metcouncil/builds/development/index.html
+++ b/20170521-metcouncil/builds/development/index.html
@@ -118,13 +118,13 @@ TEXT HERE
 
   <div class="blockSpaceOther"></div> -->
 
-  <iframe width="100%" height="360" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Aerials_1966" src="http://umn.maps.arcgis.com/apps/StorytellingSwipe/index.html?appid=437cc642bd4648d6ac245db3a66f492f"></iframe>
+  <iframe width="100%" height="360" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Aerials_1966" src="http://umn.maps.arcgis.com/apps/StorytellingSwipe/index.html?appid=f8b24666435f4c3ea0a14217cbd4d9cd"></iframe>
 
   <div class="topLabels2"><div class="leftSide">&#60;&#60;1966</div><div class="rightSide">Present&#62;&#62;</div></div>
 
   <div class="chartTitle">Comparing 1966 and present-day satellite maps</div>
   <div class="chatter">Swipe the slider to the left to see metro area metro area satellite imagery from 1966, and to the right to see current imagery. Use the zoom controls to explore.</div>
-  <div class="source">Source: <a href="https://tgis2.uspatial.umn.edu/arcgis/rest/services/Libraries/MetroAerialMosaic_1966/MapServer" target="new_">University of Minnesota U-Spatial</a></div>
+  <div class="source">Source: <a href="https://tgis2.uspatial.umn.edu/arcgis/rest/services/Libraries/MetroAerialMosaic_1966/MapServer" target="new_">University of Minnesota U-Spatial</a>, Ryan Mattke</div>
 
 </div>
 </div>
