--- a/20170615-zebra/builds/development/index.html
+++ b/20170615-zebra/builds/development/index.html
@@ -17,6 +17,7 @@
  
 <div id="wrapper">
 
+<div class="slide" id="story">
 <div id="map"></div>
 
 <div class='map-overlay-container'>
@@ -70,17 +71,8 @@
       <div class="year chatter">YEARS</div>
       <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
   </div>
-  <div class="section" id="section9">
-      <div class="chartTitle">Is your lake infested?</div>
-      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
-
-      <div id="filter"><input type="search" id="filter_box" placeholder="Search by body of water or county" /></div>
-      <div class="th cell name">Name</div><div class="th cell county">County</div>
-      <div id="listing"></div>
-  </div>
 </div>
-
-<div class="breaker"></div>
+</div>
 
 
 
@@ -98,9 +90,25 @@
 
 </div>
 
+<div class="breaker"></div>
+
+
+
+  <div class="slide" id="lookup">
+    <div id="mapLookup"></div>
+    
+      <div class="chartTitle">Is your lake infested?</div>
+      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
+
+      <div id="filter"><input type="search" id="filter_box" placeholder="Search by body of water or county" /></div>
+      <div class="th cell name">Name</div><div class="th cell county">County</div>
+      <div id="listing"></div>
+  </div>
+
 </div>
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="js/d3.v3.min.js"></script>
 <script src='js/mapbox-gl.js'></script>
 <script src='js/jquery.fullpage.min.js'></script>
