--- a/20170615-zebra/builds/development/index.html
+++ b/20170615-zebra/builds/development/index.html
@@ -100,10 +100,12 @@
       <div class="title">Is your lake or river infested?</div>
       <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
 
-
       <div id="filter" class="ui-widget"><input type="search" id="filter_box" placeholder="Search by lake or river" /></div>
-<!--       <div class="th cell name">Name</div><div class="th cell county">County</div>
-      <div id="listing"></div> -->
+
+<!--       <div id="stats">
+        Found: <span class="foundYear"></span>
+      </div> -->
+
   </div>
 </div>
 
