--- a/open_enrollment/builds/development/index.html
+++ b/open_enrollment/builds/development/index.html
@@ -26,6 +26,17 @@
 
 <div class="slide" id="charter">
 <div id="map"></div>
+
+<div class='map-overlay-container'>
+
+  <div class='map-overlay'>
+    <div>
+    	<div class="switch selected" id="state">State</div>
+    	<div class="switch" id="metro">Metro</div>
+    	<div class="switch" id="reload">&#x21bb;</div>
+    </div>
+</div>
+
 </div>
 
 </div>
