--- a/20150927-farmsafety/builds/development/index.html
+++ b/20150927-farmsafety/builds/development/index.html
@@ -286,6 +286,7 @@
 <script src="js/d3.v3.min.js"></script>
 <script src="js/d3.slider.js"></script>
 <script src="js/mapbox.js"></script>
+<script src="js/jquery.colorbox.js"></script>
 
 <script src="js/script.js"></script>
 </body>
