--- a/20150927-farmsafety/builds/development/index.html
+++ b/20150927-farmsafety/builds/development/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="Jeff Hargarten - StarTribune">
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/colorbox.css">
 
 </head>
 
@@ -38,7 +39,7 @@
 	  
     <div class="iconLegend landscapeB landscapeSwatch" icon="environmental" rel="landscapeSwatch">Landscape<div id="recordsEnvironmental" class="records recordsEnvironmental"></div></div>
     <div class="iconLegend siloB siloSwatch" icon="grain bin/silo" rel="siloSwatch">Silo<div id="recordsSilo" class="recordsSilo records"></div></div>
-    <div class="iconLegend skidB skidSwatch" icon="skid loader" rel="skidSwatch">Skid Loader<div id="recordsSkid" class="recordsSkid records"></div></div>
+    <div class="iconLegend skidB skidSwatch" icon="skid loader" rel="skidSwatch">Skid<div id="recordsSkid" class="recordsSkid records"></div></div>
     <div class="iconLegend atvB atvSwatch" icon="ATV" rel="atvSwatch">ATV<div id="recordsATV" class="recordsATV records"></div></div>
     <div class="iconLegend livestockB livestockSwatch" icon="livestock" rel="livestockSwatch">Livestock<div id="recordsLivestock" class="records recordsLivestock"></div></div>
     <div class="iconLegend truckB truckSwatch" icon="truck" rel="truckSwatch">Truck<div id="recordsTruck" class="recordsTruck records"></div></div>
