--- a/20170615-zebra/builds/development/index.html
+++ b/20170615-zebra/builds/development/index.html
@@ -96,8 +96,8 @@
   <div class="slide" id="lookup">
 
 <div id="database">
-      <div class="title">Is your lake or river infested?</div>
-      <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
+      <div class="title">Is your nearby lake or river infested with zebra mussels?</div>
+      <div class="description">More than 100 bodies of water in Minnesota have tested positive for the presence of zebra mussels so far. Use the search tool to see which lakes and rivers have been affected.</div>
 
       <div id="filter" class="ui-widget"><input type="search" id="filter_box" placeholder="Search by lake or river" /></div>
 
